add: agrego crear grupo y añadir persona al grupo
